# SolStay

./: README.md  package-lock.json
SolStayAPI/: README.md  config.json  package-lock 2.json  package-lock.json  package.json  server.js
SolStayAPI/controllers/: propertyController.js  reservationController.js  userController.js
SolStayAPI/models/: Property.js  Reservation.js  User.js  index.js
SolStayAPI/routes/: properties.js  reservations.js  users.js
SolStayUI/: .gitignore  App.tsx  README.md  app.json  metro.config.js  package-lock.json  package.json  programIdl.ts  shim.js
SolStayUI/Context/: SolanaWallet.ts
SolStayUI/Interfaces/: IModalProps.tsx
SolStayUI/MockData/: MockData.json
SolStayUI/Models/: Properties.ts
SolStayUI/Services/: EncryptedStorageService.ts  SolStayService.tsx
SolStayUI/components/: ActiveKey.tsx  AvailableProperties.tsx  Dropdown.tsx  LoadingScreen.tsx  MainNavBar.tsx  NewProperty.tsx  OwnedProperties.tsx  ReservationModal.tsx  Reservations.tsx  SearchBar.tsx
SolStayUI/hooks/: useCachedResources.ts
SolStayUI/ios/: Podfile
SolStayUI/navigation/: Navigation.tsx  Routes.ts  StackScreenProps.ts
SolStayUI/screens/: CreateAccount.tsx  HomeScreen.tsx  ImportAccount.tsx  KeysScreen.tsx  RecoveryPhraseScreen.tsx  SettingsScreen.tsx  StartupScreen.tsx
solstay-key-program/: .gitignore  Anchor.toml  package-lock.json
solstay-key-program/tests/: mintTest.ts  transferTest.ts  (+1 more)
solstay-program/: .gitignore  Cargo.toml  README.md  app.ts  build.sh  package-lock.json  package.json  solstaymetadata.json
solstay-program/src/: lib.rs
(+14 files in other folders)
